--- a/WebApplication1/Views/Home/Privacy.cshtml
+++ b/WebApplication1/Views/Home/Privacy.cshtml
@@ -1,6 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿
+<link rel="stylesheet" href="~/css/privacy.css">
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1>ABOUT</h1>
+<p>Projected created by <a href="https://github.com/DeyanPavlin"><span>Deyan Pavlin</span></a></p>
+<p>The idea is to imitate a shooping site</p>
+
