--- a/WebApplication1/wwwroot/css/layout.css
+++ b/WebApplication1/wwwroot/css/layout.css
@@ -6,12 +6,11 @@
     outline: none;
     border: none;
     text-decoration: none;
-    text-transform: capitalize;
     transition: 0.2s linear;
 }
 
 main {
-    margin-top: 80px;
+    margin-top: 125px;
     padding: 20px;
 }
 
@@ -20,7 +19,7 @@ main {
     --purple: #a020f0;
 }
 
-.dark-mode {
+.darkmode {
     background-color: #262626;
 }
 
@@ -47,6 +46,22 @@ header .logo span{
     color: var(--yellow)
 }
 
+header .button{
+    display: inline-block;
+    margin-top: auto;
+    border-radius: 5rem;
+    background: var(--yellow);
+    color: white;
+    padding: .9rem 3.5rem;
+    cursor: pointer;
+    font-size: 36px;
+}
+
+header .button:hover{
+    background: var(--purple);
+}
+
+
 header .icons a{
     font-size: 2.5rem;
     color: var(--purple);
@@ -55,4 +70,20 @@ header .icons a{
 
 header .icons a:hover {
     color: var(--yellow);
+}
+
+header .icon-button {
+    font-size: 2.5rem;
+    color: var(--purple);
+    margin-left: 1.5rem;
+    background: transparent;
+}
+
+header .icon-button:hover {
+    color: var(--yellow);
+    cursor: pointer;
+}
+
+header .icon-button:focus {
+    outline: none; 
 }
