--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,9 +1,5 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-    Layout = "_Layout";
-}
+﻿<link rel="stylesheet" href="~/css/index.css">
 
-<link rel="stylesheet" href="~/css/index.css">
 
 <div class="content">
     <div class="text-center">
@@ -12,7 +8,7 @@
         <h1>BOXES</h1>
         <h2>FOR</h2>
         <h1>BOOKS</h1>
-        <a href="#" class="btn">SHOP NOW!</a>
+        <a asp-controller="Home" asp-action="Store" class="btn">SHOP NOW!</a>
     </div>
     <div class="pictures">
         <img src="~/images/surprised.jpg"></img>
