--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -21,7 +23,7 @@
 
         <a asp-controller="Home" asp-action="Index" class="logo">Book<span>stoW</span></a>
 
-        <a href="#" class="button">SHOP NOW!</a>
+        <a asp-controller="Store" asp-action="Store" class="button">SHOP NOW!</a>
 
         <div class="icons"> 
             <button id="theme-switch" class="icon-button">
@@ -29,6 +31,8 @@
             </button>
             <a href="cart.html" class="fa-sharp fa-solid fa-cart-shopping"></a>
             <a asp-controller="Home" asp-action="Privacy" class="fa-sharp fa-solid fa-circle-info"></a>
+            <a asp-controller="Home" asp-action="Profile" class="fa-sharp fa-solid fa-user"></a>
+
         </div>
 
     </header>
