--- a/WebApplication1/wwwroot/css/layout.css
+++ b/WebApplication1/wwwroot/css/layout.css
@@ -9,18 +9,27 @@
     transition: 0.2s linear;
 }
 
+
 main {
-    margin-top: 125px;
+    margin-top: 10rem;
+    margin-left: 1rem;
     padding: 20px;
 }
 
 :root {
     --yellow: #F4BB44;
     --purple: #a020f0;
+    --mode: white;
 }
 
 .darkmode {
-    background-color: #262626;
+    --yellow: #F4BB44;
+    --purple: #a020f0;
+    --mode: #262626;
+}
+
+body {
+    background-color: var(--mode);
 }
 
 header {
@@ -34,56 +43,58 @@ header {
     justify-content: space-between;
     z-index: 1000;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
 }
 
-header .logo{
+.logo{
     font-size: 3rem;
     color: var(--purple);
     font-weight: bolder;
 }
 
-header .logo span{
+.logo span{
     color: var(--yellow)
 }
 
-header .button{
-    display: inline-block;
-    margin-top: auto;
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5rem;
     background: var(--yellow);
     color: white;
     padding: .9rem 3.5rem;
     cursor: pointer;
-    font-size: 36px;
-}
+    font-size: 36px;}
 
-header .button:hover{
+
+.button:hover{
     background: var(--purple);
 }
 
 
-header .icons a{
+.icons a{
     font-size: 2.5rem;
     color: var(--purple);
     margin-left: 1.5rem;
 }
 
-header .icons a:hover {
+.icons a:hover {
     color: var(--yellow);
 }
 
-header .icon-button {
+.icon-button {
     font-size: 2.5rem;
     color: var(--purple);
     margin-left: 1.5rem;
     background: transparent;
 }
 
-header .icon-button:hover {
+.icon-button:hover {
     color: var(--yellow);
     cursor: pointer;
 }
 
-header .icon-button:focus {
+.icon-button:focus {
     outline: none; 
 }
