--- a/WebApplication1/wwwroot/css/privacy.css
+++ b/WebApplication1/wwwroot/css/privacy.css
@@ -1,11 +1,4 @@
-﻿* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-:root {
+﻿:root {
     --yellow: #F4BB44;
     --purple: #a020f0;
 }
