--- a/WebApplication1/Views/Store/Store.cshtml
+++ b/WebApplication1/Views/Store/Store.cshtml
@@ -15,8 +15,28 @@
             </div>
         }
     }
-    else
-    {
-        <p>No products available.</p>
-    }
+    <div class="element">
+        <img src="~/images/box.png" alt="Product Image" />
+        <h3>RANDOM BOOK MYSTERY BOX</h3>
+        <button class="buy"><h6>$56</h6></button>
+        <div class="info">The perfect gift for a bookworm!S</div>
+    </div>
+    <div class="element">
+        <img src="~/images/box.png" alt="Product Image" />
+        <h3>THG MYSTERY BOX</h3>
+        <button class="buy"><h6>$30</h6></button>
+        <div class="info">The perfect gift for a fan of The Hunger Games!</div>
+    </div>
+    <div class="element">
+        <img src="~/images/box.png" alt="Product Image" />
+        <h3>H. POTTER MYSTERY BOX</h3>
+        <button class="buy"><h6>$14</h6></button>
+        <div class="info">The perfect gift for a Harry Potter fan!</div>
+    </div>
+    <div class="element">
+        <img src="~/images/box.png" alt="Product Image" />
+        <h3>PERRCY JACKSON MYSTERY BOX</h3>
+        <button class="buy"><h6>$22</h6></button>
+        <div class="info">The perfect gift for a fan of Percy Jackson!</div>
+    </div>
 </div>
