--- a/WebApplication1/Views/Home/Profile.cshtml
+++ b/WebApplication1/Views/Home/Profile.cshtml
@@ -2,24 +2,30 @@
 
 <h1>Change profile</h1>
 <p>In this demo site you are logged as a <span>BUYER ACCOUNT</span> but if you click the button below, you are logged in an <span>ADMIN ACCOUNT</span> the admin account is able to post content in the store page</p>
-<button id="adminModeBtn" onclick="toggleAdminMode()">Change account</button>
+<div class="position-wrapper">
+    <button id="adminModeBtn" onclick="toggleAdminMode()">Change account</button>
+</div>
 
-<div id="adminSection" style="display:none;">
-    <h2>Add New Product</h2>
-    <form id="addProductForm" method="post" enctype="multipart/form-data" action="/Store/AddProduct">
-        <label for="productName">Product Name:</label>
-        <input type="text" id="productName" name="productName" required><br><br>
+<div class="grid-wrapper">
 
-        <label for="productInfo">Product Info:</label>
-        <textarea id="productInfo" name="productInfo" required></textarea><br><br>
-
-        <label for="productPrice">Product Price:</label>
-        <input type="number" id="productPrice" name="productPrice" required><br><br>
-
-        <label for="productImage">Product Image:</label>
-        <input type="file" id="productImage" name="productImage" accept="image/*" required><br><br>
-
-        <button type="submit">Add Product</button>
-    </form>
+    <div id="adminSection" style="display:none;">
+        <h2>Add New Product</h2>
+        <form id="addProductForm" method="post" enctype="multipart/form-data" action="/Store/AddProduct">
+            <label for="productName">Product Name:</label>
+            <input type="text" id="productName" name="productName" maxlength="23" required><br><br>
+    
+            <label for="productInfo">Product Info:</label>
+            <textarea id="productInfo" name="productInfo" maxlength="620" required></textarea><br><br>
+    
+            <label for="productPrice">Product Price:</label>
+            <input type="number" id="productPrice" name="productPrice" required><br><br>
+    
+            <label for="productImage">Product Image:</label>
+            <input type="file" id="productImage" name="productImage" accept="image/*" required><br><br>
+    
+            <button type="submit" class="add-product-btn">Add Product</button>
+        </form>
+    
+    </div>
 
 </div>
