--- a/WebApplication1/wwwroot/css/store.css
+++ b/WebApplication1/wwwroot/css/store.css
@@ -62,9 +62,10 @@ img {
 
 h3 {
     text-align: center;
-    font-size: 50px;
+    font-size: 21px;
     margin: 0;
     padding-top: 10px;
+    text-transform: uppercase;
 }
 
 h6{
