--- a/WebApplication1/Views/Store/Store.cshtml
+++ b/WebApplication1/Views/Store/Store.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Controllers.Product>
+﻿@model IEnumerable<WebApplication1.Models.Product>
 
 <link rel="stylesheet" href="~/css/store.css">
 
@@ -10,33 +10,12 @@
             <div class="element">
                 <img src="@product.ImageUrl" alt="Product Image" />
                 <h3>@product.Name</h3>
-                <button class="buy"><h6>@product.Price.ToString("C")</h6></button>
+                <button class="buy" onclick="addToCart('@product.Name', 1)">
+                    <h6>@product.Price.ToString("C")</h6>
+                </button>
+
                 <div class="info">@product.Info</div>
             </div>
         }
     }
-    <div class="element">
-        <img src="~/images/box.png" alt="Product Image" />
-        <h3>RANDOM BOOK MYSTERY BOX</h3>
-        <button class="buy"><h6>$56</h6></button>
-        <div class="info">The perfect gift for a bookworm!S</div>
-    </div>
-    <div class="element">
-        <img src="~/images/box.png" alt="Product Image" />
-        <h3>THG MYSTERY BOX</h3>
-        <button class="buy"><h6>$30</h6></button>
-        <div class="info">The perfect gift for a fan of The Hunger Games!</div>
-    </div>
-    <div class="element">
-        <img src="~/images/box.png" alt="Product Image" />
-        <h3>H. POTTER MYSTERY BOX</h3>
-        <button class="buy"><h6>$14</h6></button>
-        <div class="info">The perfect gift for a Harry Potter fan!</div>
-    </div>
-    <div class="element">
-        <img src="~/images/box.png" alt="Product Image" />
-        <h3>PERRCY JACKSON MYSTERY BOX</h3>
-        <button class="buy"><h6>$22</h6></button>
-        <div class="info">The perfect gift for a fan of Percy Jackson!</div>
-    </div>
 </div>
