--- a/WebApplication1/Views/Home/Profile.cshtml
+++ b/WebApplication1/Views/Home/Profile.cshtml
@@ -18,7 +18,7 @@
             <textarea id="productInfo" name="productInfo" maxlength="620" required></textarea><br><br>
     
             <label for="productPrice">Product Price:</label>
-            <input type="number" id="productPrice" name="productPrice" required><br><br>
+            <input type="number" id="productPrice" name="productPrice" step="0.01" required><br><br>
     
             <label for="productImage">Product Image:</label>
             <input type="file" id="productImage" name="productImage" accept="image/*" required><br><br>
